COMMONMARK_GRAMMAR.txt
<document>         ::= <block>* <EOF>

<block>            ::= <code_block>
                     | <paragraph>

<code_block>       ::= CODE_FENCE
                       <language_specifier>?
                       <newline>?
                       <code_content>
                       <newline>?
                       CODE_FENCE

<language_specifier>  ::= LANGUAGE_SPECIFIER

<code_content>     ::= CODE_CONTENT

<paragraph>        ::= <inline>+

<inline>           ::= <bold>
                     | <italic>
                     | <strike>
                     | <spoiler>
                     | <inline_code>
                     | <link>
                     | <emoji>
                     | <plain_text>

<bold>             ::= BOLD_MARKER <inline>+ BOLD_MARKER

<italic>           ::= ITALIC_MARKER <inline>+ ITALIC_MARKER

<strike>           ::= STRIKE_MARKER <inline>+ STRIKE_MARKER

<spoiler>          ::= SPOILER_MARKER <inline>+ SPOILER_MARKER

<inline_code>      ::= INLINE_CODE_MARKER <plain_text> INLINE_CODE_MARKER

<link>             ::= LBRACKET <link_text> RBRACKET LPAREN <link_url> RPAREN

<emoji>            ::= LBRACKET EMOJI_TEXT RBRACKET LPAREN CUSTOM_EMOJI_PREFIX NUMBER RPAREN

<plain_text>       ::= TEXT

<link_text>        ::= TEXT    /* or a sequence of TEXT nodes */
<link_url>         ::= TEXT    /* the URL is captured as TEXT in this simplified grammar */

<newline>          ::= NEWLINE
